--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,13 +30,14 @@ jobs:
             size: medium
           - arch: aarch64-darwin
             runner: arm64-darwin
-            size: small
+            size: small          
     steps:
       - uses: actions/checkout@v4
 
       - name: Build all packages
+        shell: nix develop -v -c bash -euo pipefail {0}   
         run: |
-          nix build -L -v '.#defaultPackage.${{ matrix.runner.arch }}'
+          ./cli.sh fn_nix_build -L '.#defaultPackage.${{ matrix.runner.arch }}'
 
       - name: Cache all packages
         env:
@@ -71,12 +72,12 @@ jobs:
 
       - name: Build all images
         run: |
-          ./cli.sh build_all_images ${{ matrix.imageArch }}
+          ./cli.sh fn_build_all_images ${{ matrix.imageArch }}
 
       - name: Push all images
         if: github.ref_name == 'main'
         run: |
-          ./cli.sh push_all_single_arch_images ${{ matrix.imageArch }}
+          ./cli.sh fn_push_all_single_arch_images ${{ matrix.imageArch }}
 
   push-manifests:
     name: Build and push multi-arch manifests
@@ -94,4 +95,4 @@ jobs:
 
       - name: Build and push images
         run: |
-          ./cli.sh push_all_manifests
+          ./cli.sh fn_push_all_manifests
